# utc2k

./: CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  msrv.yaml
benches/: d_fmtutc2k.rs  d_local.rs  d_utc2k.rs  d_weekmonth.rs
examples/: local.rs
src/: abacus.rs  chr.rs  date.rs  error.rs  lib.rs  local.rs  macros.rs  month.rs  period.rs  serde.rs  sqlx.rs  weekday.rs  year.rs
src/date/: abacus.rs  fancy_fmt.rs  local.rs  mod.rs  parse.rs
