[package]
name = "utc2k"
version = "0.12.1"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.87"
description = "A fast and lean UTC date/time library concerned only with happenings in this century (2000-2099)."
license = "WTFPL"
repository = "https://github.com/Blobfolio/utc2k"
readme = "README.md"
keywords = [ "time", "date", "utc", "unixtime", "printing" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"CREDITS.md",
	"doc",
	"justfile",
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "local", "serde" ]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "UTC2K"

[dev-dependencies]
brunch = "0.10.*"
fastrand = "2"
serde = "1.0.*"
serde_json = "1.0.*"

[dev-dependencies.time]
version = "0.3.*"
default-features = false
features = [ "std", "formatting" ]

[dependencies.serde]
version = "1.0.*"
optional = true

[dependencies.tz-rs]
version = "=0.7.0"
optional = true

[features]
default = []

# This enables the "LocalOffset" struct for tricking — with caveats — Utc2k
# and FmtUtc2k into holding a local datetime rather than a UTC one. This only
# works on unix, but shouldn't outright break non-unix builds.
local = [ "tz-rs" ]

# This enables (de)/serialize support for Utc2k and FmtUtc2k.
serde = [ "dep:serde" ]

[[bench]]
name = "d_utc2k"
harness = false

[[bench]]
name = "d_fmtutc2k"
harness = false

[[bench]]
name = "d_weekmonth"
harness = false

[[bench]]
name = "d_local"
harness = false
required-features = [ "local" ]
