[package]
name = "utc2k"
version = "0.17.0"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.88"
description = "A fast and lean UTC date/time library concerned only with happenings in this century (2000-2099)."
license = "WTFPL"
repository = "https://github.com/Blobfolio/utc2k"
readme = "README.md"
keywords = [ "time", "date", "utc", "unixtime", "printing" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"CREDITS.md",
	"doc",
	"examples",
	"justfile",
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "local", "serde", "sqlx-mysql" ]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "UTC2K"

[dev-dependencies]
brunch = "0.11.*"
fastrand = "2"
serde = "1.0.*"
serde_json = "1.0.*"

[dev-dependencies.time]
version = "0.3.*"
default-features = false
features = [ "std", "formatting" ]

[dependencies.serde]
version = "1.0.*"
optional = true

[dependencies.sqlx]
version = "0.8.6"
optional = true
default-features = false

[dependencies.tz-rs]
version = "=0.7.0"
optional = true

[features]
default = []

# Enable (barebones) date/time localization support.
local = [ "tz-rs" ]

# Enable (de)/serialize support for Utc2k, FmtUtc2k, Month, and
# Weekday.
serde = [ "dep:serde" ]

# Add sqlx type/decode/encode support for Utc2k (only).
sqlx-mysql = [ "sqlx", "sqlx/mysql" ]

[[bench]]
name = "d_utc2k"
harness = false

[[bench]]
name = "d_fmtutc2k"
harness = false

[[bench]]
name = "d_weekmonth"
harness = false

[[bench]]
name = "d_local"
harness = false
required-features = [ "local" ]
